# PaperCode

./: .gitignore
Emotion_grpo/: .gitignore  README.md  pyproject.toml
Emotion_grpo/configs/: base.yaml
Emotion_grpo/configs/experiment/: emotion_vector_qwen3_0_6b_demo.yaml  logical_qa_exact_match.yaml  logical_reasoning_vector_qwen3_0_6b.yaml  single_gpu_demo.yaml  smoke_test.yaml
Emotion_grpo/configs/model/: qwen2_5_0_5b_instruct.yaml
Emotion_grpo/configs/runtime/: single_gpu.yaml  two_gpu_template.yaml
Emotion_grpo/data/demo/: train.jsonl  val.jsonl
Emotion_grpo/data/logical/: sample.jsonl  sample2.jsonl
Emotion_grpo/data/logical_prepared/: logical_qa_train.jsonl  logical_qa_val.jsonl
Emotion_grpo/data/logical_vector_prepared/: logical_reasoning_train.jsonl  logical_reasoning_val.jsonl
Emotion_grpo/data/vector_demo/: train.jsonl  val.jsonl
Emotion_grpo/scripts/: build_logical_reasoning_vector.sh  install.sh  smoke_test.sh  train_emotion_vector_qwen3_0_6b.sh  train_logical_qa.sh  train_logical_reasoning_vector.sh  train_single_gpu.sh
Emotion_grpo/src/emotion_grpo/: config.py  data.py  launcher.py  verl_reward.py
Emotion_grpo/tests/: test_dataset_schema.py  test_emotion_vector_provider.py  test_launcher.py  test_logical_data.py  test_logical_reward.py  test_logical_vector_provider.py  test_random_provider.py  test_verl_reward.py
anthropic/: .gitignore  README.md  pyproject.toml  requirements.txt
anthropic/configs/: default.yaml  real_medium.yaml  real_small.yaml  smoke.yaml
anthropic/datasets/: README.md  emotion_constraints.yaml  topics_100.yaml
anthropic/goemotions/: README.md
anthropic/goemotions/pipeline/: build_emotion_vectors_goemotions.py  extract_residuals_goemotions.py
anthropic/prompts/: README.md  story_templates.yaml
anthropic/report/: README.md
anthropic/scripts/: bootstrap_env.sh  run_pipeline.sh  run_step.sh  tree_report.sh
anthropic/src/anthropic_emotions_repro/: __init__.py  artifacts.py  cli.py  config.py  constants.py  io.py  readme_templates.py  runtime.py
anthropic/tests/: test_activation_cache.py  test_artifacts.py  test_cleanup.py  test_cli_smoke.py  test_config.py  test_fixed_inputs.py  test_runtime_cleanup.py  test_story_prompting.py  test_vectors.py
decoder_soft_prompt/: Current_Version.md  README.md  README_goemotions.md  download_emotion_datasets.py  preprocess_goemotions.py  pyproject.toml  soft_prompt_paper.md
decoder_soft_prompt/configs/: anthropic_qwen3_0_6b_projected_demo.yaml  anthropic_qwen3_0_6b_projected_emotion24_task.yaml  anthropic_qwen3_14b_emotion24_task.yaml  anthropic_qwen3_14b_emotion24_task_500.yaml  anthropic_qwen3_14b_emotion24_task_800.yaml  anthropic_qwen3_14b_emotion_demo.yaml  base.yaml  goemotions_soft_prompt.yaml
decoder_soft_prompt/data/: demo_eval.jsonl  demo_train.jsonl  emotion24_eval.jsonl  emotion24_train.jsonl
decoder_soft_prompt/src/decoder_soft_prompt_repro/: cli.py  config.py  data.py  eval_analysis.py  plotting.py  projection.py  prompt_ensemble.py  prompt_tuning.py  training.py
decoder_soft_prompt/tests/: test_projection.py  test_prompt_tuning.py  test_validation.py
soft_prompt/: APPENDIX_A_REPRODUCIBILITY.md  APPENDIX_A_SUMMARY.md  DATASET_VALIDATION_GUIDE.md  IMPLEMENTATION_CHAPTER_6_7.md  PAPER_IMPLEMENTATION_MAP.md  README.md  pyproject.toml
soft_prompt/configs/: base.yaml  figure1_compare.yaml
soft_prompt/configs/ablations/: init_strategy.yaml  model_scale.yaml  prompt_length.yaml
soft_prompt/configs/baselines/: model_tuning.yaml  model_tuning_multitask.yaml
soft_prompt/configs/repro/: paper_defaults.yaml  table6_search_space.yaml
soft_prompt/src/soft_prompt_repro/: __init__.py  cli.py  config.py  data.py  dataset_validation.py  interpretability.py  tasks.py  (+5 more)
soft_prompt/tests/: test_config.py  test_interpretability.py  test_metrics.py  test_prompt_tuning.py
(+62 files in other folders)
